[package]
name = "titlecard"
version = "0.1.1"
edition = "2024"
authors = ["Hassan Qasemi"]
description = "A small utility to center ASCII art in the terminal"
license = "MIT"
repository = "https://github.com/rivethorn/titlecard"
homepage = "https://github.com/rivethorn/titlecard"
readme = "README"

[dependencies]
libc = "0.2.186"
